--- a/scss/index.scss
+++ b/scss/index.scss
@@ -12,4 +12,5 @@
 @import "blocks/section9";
 @import "blocks/section10";
 @import "blocks/section11";
+@import "blocks/section12";
 @import "blocks/footer";
