--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,97 +1,209 @@
-// .footer {
-//   padding: 100px 0 30px;
-//   @media screen and (max-width: 992px) {
-//     padding: 50px 0 30px;
-//   }
-//   .footer__items {
-//     display: flex;
-//     justify-content: space-between;
-//     position: relative;
-//     margin-bottom: 125px;
-//     &::after {
-//       content: "";
-//       position: absolute;
-//       right: 0;
-//       left: 0;
-//       top: -50px;
-//       width: 100%;
-//       height: 1px;
-//       background: #5555552a;
-//     }
-//     .footer__title {
-//       .footer__text {
-//         @include footer-subtitle;
-//         max-width: 205px;
-//         width: 100%;
-//         margin: 20px 0;
-//       }
-//       .footer__icons {
-//         display: flex;
-//         .footer__icon {
-//           transition: all 0.8s;
-//           @include icon;
-//           &:hover {
-//             transform: rotate(360deg);
-//           }
-//         }
-//         .footer__icon_facebook {
-//           background: #3b579d;
-//         }
-//         .footer__icon_google {
-//           background: #da4835;
-//         }
-//         .footer__icon_twitter {
-//           background: #55acee;
-//         }
-//       }
-//     }
-//     .footer__item {
-//       h6 {
-//         @include footer-title;
-//         margin-bottom: 45px;
-//       }
-//       a {
-//         @include footer-subtitle;
-//       }
-//     }
-//   }
-//   @media screen and (max-width: 768px) {
-//     .footer__items {
-//       flex-wrap: wrap;
-//       margin: 50px auto;
-//       .footer__item {
-//         margin: 0 auto;
-//         margin-bottom: 20px;
-//       }
-//     }
-//   }
-//   .footer__copyright {
-//     display: flex;
-//     position: relative;
-//     &::after {
-//       content: "";
-//       position: absolute;
-//       right: 0;
-//       left: 5px;
-//       top: -35px;
-//       width: 100%;
-//       height: 1px;
-//       background: #5555552a;
-//     }
-//     p {
-//       @include footer-subtitle;
-//       margin-right: 35px;
-//       position: relative;
-//       &:not(:first-child)::after {
-//         content: "";
-//         position: absolute;
-//         right: 0;
-//         left: -16px;
-//         top: 6px;
-//         width: 1px;
-//         height: 18px;
-//         background: #555555bb;
-//       }
-//     }
-//   }
-// }
+.footer {
+  padding: 70px 0 0;
+  .footer__content {
+    display: grid;
+    grid-template-columns: 1fr 340px 270px;
+    justify-content: space-between;
+    margin: 0 0 70px;
+    .footer__items {
+      padding: 0;
+      margin-right: 30px;
+      max-width: 470px;
+      width: 100%;
+      .footer__text {
+        @include p;
+        margin: 45px 0 50px;
+      }
+      p.footer__followers {
+        font-size: 14px;
+        color: #222222;
+        font-weight: 700;
+        margin-bottom: 20px;
+        span {
+          font-size: 18px;
+          font-weight: 700;
+          margin-right: 5px;
+        }
+      }
+      .footer__followUs {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 15px 0;
+        border-top: 1px solid #dbd9d9;
+        p {
+          font-family: "Roboto", sans-serif;
+          font-weight: 300;
+          font-size: 15px;
+          color: #999999;
+          font-style: italic;
+          margin-right: 25px;
+        }
+        a {
+          text-decoration: none;
+          color: #95e1d3;
+          padding-right: 15px;
+        }
+      }
+      .footer__input {
+        #input {
+          max-width: 200px;
+          width: 100%;
+          height: auto;
+          padding: 10px;
+          border: 1px solid #dbd9d9;
+          font-size: 15px;
+          color: #999999;
+          &::placeholder {
+            color: #d9d9d9;
+            font-family: "Roboto", sans-serif;
+            font-weight: 300;
+            font-size: 15px;
+            font-style: italic;
+          }
+          &:focus {
+            outline: none;
+          }
+        }
+        .footer__btn {
+          max-width: 150px;
+          width: 100%;
+          max-height: 40px;
+          height: 100%;
+          border: 1px solid #95e1d3;
+          background: #95e1d3;
+          text-transform: uppercase;
+          font-size: 14px;
+          font-weight: 700;
+          color: #fff;
+          padding: 11px;
+        }
+      }
+    }
+    .footer__blogs {
+      max-width: 320px;
+      width: 100%;
+      margin-right: 15px;
+      h6 {
+        @include h6;
+        font-size: 14px;
+        margin-bottom: 40px;
+      }
+      .footer__blogs__item {
+        display: flex;
+        align-items: center;
+        margin-bottom: 30px;
+        &:last-child {
+          margin-bottom: 0;
+        }
+        .footer__blogs__title {
+          @include h6;
+          font-size: 12px;
+          margin: 10px 0 10px 20px;
+        }
+        .footer__blogs__subtitle {
+          color: #999999;
+          font-family: "Roboto", sans-serif;
+          font-weight: 300;
+          font-size: 13px;
+          font-style: italic;
+          margin-left: 20px;
+        }
+      }
+    }
+    .footer__instagram {
+      h6 {
+        @include h6;
+        font-size: 14px;
+        margin-bottom: 40px;
+      }
+      .footer__instagram__items {
+        display: grid;
+        grid-template-rows: 88px 1fr 1fr;
+        grid-template-columns: 88px 1fr 1fr;
+        gap: 2px;
+        .footer__inst__logo {
+          &.active {
+            display: none;
+          }
+        }
+      }
+      .footer__viewMore {
+        margin-top: 20px;
+        a {
+          color: #999999;
+          font-family: "Roboto", sans-serif;
+          font-weight: 300;
+          font-size: 13px;
+          font-style: italic;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+  .footer__date {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding: 25px 0;
+    border-top: 1px solid #dbd9d9;
+    .footer__date__MoGo {
+      font-family: "Roboto", sans-serif;
+      font-style: italic;
+      font-weight: 300;
+      font-size: 14px;
+      color: #999999;
+      margin-bottom: 0;
+      #date {
+        margin: 0 5px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 1199px) {
+  .footer {
+    .footer__content {
+      grid-template-rows: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+      margin-bottom: 20px;
+      .footer__items {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row: 2;
+        margin: 30px auto;
+      }
+      .footer__blogs {
+        margin: 0 auto;
+      }
+      .footer__instagram {
+        margin: 0 auto;
+      }
+    }
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer {
+    padding-top: 50px;
+    .footer__content {
+      grid-template-rows: 3fr;
+      grid-template-columns: 1fr;
+      .footer__items {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row: 3;
+        margin: 30px auto 0;
+      }
+      .footer__blogs {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row: 2;
+        margin: 0 auto 30px;
+      }
+      .footer__instagram {
+        margin: 0 auto 30px;
+      }
+    }
+    .footer__date {
+      padding: 10px 0;
+    }
+  }
+}
