--- a/scss/blocks/_section9.scss
+++ b/scss/blocks/_section9.scss
@@ -1,91 +1,112 @@
-.filter {
-  padding: 50px 0;
-  .filter__title {
+.blog {
+  padding: 100px 0;
+  .blog__title {
     @include title;
-    margin-bottom: 40px;
-    @media screen and (max-width: 992px) {
-      margin-bottom: 20px;
+    margin-bottom: 15px;
+  }
+  .blog__content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    .blog__date {
+      position: absolute;
+      width: 60px;
+      height: 70px;
+      background: #95e1d3;
+      bottom: 170px;
+      left: -15px;
+      text-align: center;
+      padding-top: 10px;
+      .blog__date__item {
+        font-size: 30px;
+        margin: 0;
+        color: #fff;
+        font-weight: 700;
+        line-height: 1em;
+      }
+      span {
+        font-family: "Roboto", sans-serif;
+        font-weight: 300;
+        font-size: 15px;
+        color: #fff;
+        font-style: italic;
+      }
+    }
+    .blog__items {
+      max-width: 350px;
+      width: 100%;
+      height: auto;
+      margin-right: 30px;
+      padding: 0;
+      &:last-child {
+        margin-right: 0;
+      }
+      h6 {
+        @include h6;
+        font-size: 14px;
+        margin: 20px 0;
+        font-family: "Roboto", sans-serif;
+        letter-spacing: 1px;
+      }
+      p {
+        @include p;
+        line-height: 1.5em;
+      }
+      .blog__logo {
+        position: relative;
+        img {
+          max-width: 360px;
+          width: 100%;
+          height: auto;
+        }
+      }
+      .blog__views {
+        padding-top: 19px;
+        border-top: 1px solid #dbd9d9;
+        .fas {
+          color: #95e1d3;
+        }
+        span {
+          font-family: "Roboto", sans-serif;
+          font-weight: 300;
+          font-size: 15px;
+          color: #999999;
+          font-style: italic;
+          margin: 0 15px 0 10px;
+        }
+      }
     }
   }
-  .filter__wrapper {
-    margin: 0;
-    .tabs__btns {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-      border-top: 1px solid #e1e1e1;
-      border-bottom: 1px solid #e1e1e1;
-      padding: 25px;
-      margin-bottom: 30px;
-      .tabs__btn {
-        color: #777777;
-        margin-right: 45px;
-        font-size: 14px;
-        text-transform: uppercase;
-        font-weight: 700;
-        letter-spacing: 1px;
-        cursor: pointer;
-        transition: 0.5s;
-        position: relative;
-        user-select: none;
-        &:hover {
-          color: #333333;
-        }
+}
+@media screen and (max-width: 1199px) {
+  .blog {
+    .blog__content {
+      .blog__items {
+        margin: 0 0 35px;
         &:last-child {
-          margin-right: 0;
-        }
-        &:focus {
-          outline: none;
-        }
-        @media screen and (max-width: 992px) {
-          margin-right: 30px;
+          margin-bottom: 0;
         }
       }
     }
-    .tabs__cards {
-      columns: 3;
-      max-height: 1900px;
-      height: 100%;
-      width: auto;
-      margin-bottom: 40px;
-      .tabs__card {
-        margin-bottom: 20px;
-        page-break-inside: avoid;
-        break-inside: avoid;
-        display: none;
-        animation: appear 1s forwards;
-        @keyframes appear {
-          0% {
-            opacity: 0;
-          }
-          100% {
-            opacity: 1;
-          }
+  }
+}
+@media screen and (max-width: 768px) {
+  .blog {
+    padding: 75px 0;
+  }
+}
+@media screen and (max-width: 576px) {
+  .blog {
+    padding: 50px 0;
+  }
+}
+@media screen and (max-width: 369px) {
+  .blog {
+    .blog__content {
+      .blog__items {
+        .first_date {
+          bottom: 190px;
         }
-        &.active {
-          display: block;
-        }
-        &.vis {
-          display: none;
-        }
-        img {
-          width: 100%;
-        }
-      }
-    }
-    .filter__more_files {
-      display: flex;
-      margin: 0 auto;
-      input[type="file"] {
-        display: none;
-      }
-      .filter__more {
-        @include btns;
-        cursor: pointer;
-        width: 125px;
-        height: auto;
-        padding: 10px 30px;
       }
     }
   }
