--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -207,3 +207,29 @@
     }
   }
 }
+
+.footer__btn {
+  opacity: 0;
+  &.show {
+    opacity: 1;
+  }
+  .btn__top {
+    position: fixed;
+    color: #fff;
+    bottom: 80px;
+    right: 40px;
+    z-index: 9999;
+    width: 30px;
+    height: 30px;
+    font-size: 15px;
+    text-align: center;
+    line-height: 30px;
+    background: linear-gradient(
+      180deg,
+      rgba(232, 129, 130, 0.9) 0%,
+      rgba(239, 217, 137, 0.9) 100%
+    );
+    cursor: pointer;
+    border-radius: 2px;
+  }
+}
