--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -274,7 +274,7 @@
 }
 @media screen and (max-width: 575px) {
   .header {
-    padding: 0 15px;
+    padding: 0 15px 130px;
     .header__navigation {
       margin-bottom: 100px;
       .hamburger-menu {
