--- a/scss/blocks/_section3.scss
+++ b/scss/blocks/_section3.scss
@@ -1,5 +1,5 @@
 .services {
-  padding: 100px 0;
+  padding: 100px 0 50px;
   .services__title {
     @include title;
     margin-bottom: 0;
@@ -49,7 +49,7 @@
 }
 @media screen and (max-width: 992px) {
   .services {
-    padding: 50px 0;
+    padding: 50px 0 0;
     .services__conten_line {
       &::after {
         display: none;
