--- a/scss/blocks/_section9.scss
+++ b/scss/blocks/_section9.scss
@@ -92,7 +92,7 @@
 }
 @media screen and (max-width: 768px) {
   .blog {
-    padding: 75px 0;
+    padding: 75px 0 50px;
   }
 }
 @media screen and (max-width: 576px) {
