--- a/scss/blocks/_section6.scss
+++ b/scss/blocks/_section6.scss
@@ -1,5 +1,5 @@
 .team {
-  padding: 100px 0;
+  padding: 30px 0;
   text-align: center;
   @media screen and (max-width: 992px) {
     padding: 50px 0;
@@ -14,20 +14,19 @@
         background: #95e1d3;
         max-width: 380px;
         width: 100%;
-        max-height: 470px;
-        height: 100%;
+        height: auto;
         .team__item {
           position: relative;
           max-width: 380px;
           width: 100%;
-          height: 470px;
+          height: auto;
           cursor: pointer;
           transition: 0.5s;
           .team__pick {
             img {
               max-width: 380px;
               width: 100%;
-              height: 470px;
+              height: auto;
             }
           }
           .team__overlay {
@@ -99,7 +98,7 @@
     }
   }
 }
-@media screen and (max-width: 1140px) {
+@media screen and (max-width: 1199px) {
   .team {
     .team__logo {
       max-width: 380px;
