--- a/src/index.css
+++ b/src/index.css
@@ -1330,7 +1330,7 @@ a {
 }
 
 .team {
-  padding: 100px 0;
+  padding: 30px 0;
   text-align: center;
 }
 
@@ -1397,15 +1397,14 @@ a {
   background: #95e1d3;
   max-width: 380px;
   width: 100%;
-  max-height: 470px;
-  height: 100%;
+  height: auto;
 }
 
 .team .team__content .team__logo .team__background .team__item {
   position: relative;
   max-width: 380px;
   width: 100%;
-  height: 470px;
+  height: auto;
   cursor: pointer;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -1414,7 +1413,7 @@ a {
 .team .team__content .team__logo .team__background .team__item .team__pick img {
   max-width: 380px;
   width: 100%;
-  height: 470px;
+  height: auto;
 }
 
 .team .team__content .team__logo .team__background .team__item .team__overlay {
@@ -1507,7 +1506,7 @@ a {
   margin: 0 auto;
 }
 
-@media screen and (max-width: 1140px) {
+@media screen and (max-width: 1199px) {
   .team .team__logo {
     max-width: 380px;
     margin: 0 auto;
@@ -2158,7 +2157,7 @@ a {
 
 @media screen and (max-width: 768px) {
   .blog {
-    padding: 75px 0;
+    padding: 75px 0 50px;
   }
 }
 
@@ -2177,11 +2176,12 @@ a {
 .map {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(217, 217, 217, 0.9)), to(rgba(217, 217, 217, 0.9))), url(/img/background-section11.png) no-repeat center/cover;
   background: linear-gradient(180deg, rgba(217, 217, 217, 0.9) 0%, rgba(217, 217, 217, 0.9) 100%), url(/img/background-section11.png) no-repeat center/cover;
-  padding: 50px 0 80px;
-  cursor: pointer;
+  position: relative;
 }
 
-.map .map__items {
+.map .map__logo {
+  padding: 50px 0 80px;
+  cursor: pointer;
   text-align: center;
   color: #f38181;
   font-size: 24px;
@@ -2189,7 +2189,7 @@ a {
   text-transform: uppercase;
 }
 
-.map .map__items h3 {
+.map .map__logo h3 {
   margin-top: 17px;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -2198,7 +2198,7 @@ a {
   position: relative;
 }
 
-.map .map__items h3::after {
+.map .map__logo h3::after {
   content: "";
   position: absolute;
   width: 60px;
@@ -2210,140 +2210,33 @@ a {
   transform: translateX(48%);
 }
 
-.subskribe {
-  padding: 100px 0;
+.map .map__logo.invis {
+  display: none;
 }
 
-@media screen and (max-width: 992px) {
-  .subskribe {
-    padding: 50px;
-  }
+.map .map__items {
+  display: none;
 }
 
-.subskribe .subskribe__title {
-  text-align: center;
-  margin: 0 auto;
-  margin-bottom: 130px;
-  margin-bottom: 80px;
-}
-
-.subskribe .subskribe__title h6 {
-  color: #333333;
-  font-size: 24px;
-  padding-bottom: 27px;
-  font-family: "Kaushan Script", cursive;
-}
-
-.subskribe .subskribe__title h2 {
-  font-size: 30px;
-  font-weight: 700;
-  padding-bottom: 80px;
-  text-transform: uppercase;
-  font-family: "Montserrat";
-  color: #333333;
-  position: relative;
-}
-
-.subskribe .subskribe__title h2::after {
-  content: "";
-  position: absolute;
+.map .map__items.vis {
   display: block;
-  border: 1px solid #f38181;
-  top: 70px;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  width: 60px;
-  height: 3px;
-  background: #f38181;
 }
 
-.subskribe .subskribe__title p {
-  max-width: 950px;
-  width: 100%;
-  height: auto;
-  margin: 0 auto;
-  text-align: center;
-  font-size: 15px;
-  font-family: "Roboto", sans-serif;
-  color: #999999;
-}
-
-@media screen and (max-width: 992px) {
-  .subskribe .subskribe__title {
-    margin-bottom: 30px;
-  }
-}
-
-.subskribe .subskribe__content .subskribe__form input {
-  max-width: 370px;
-  width: 100%;
-  height: 75px;
-  border: 1px solid #f5fafa;
-  border-radius: 30px;
-  background: #f5fafa;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0 auto 30px;
-  text-align: center;
-  color: #d0d4d4;
-  outline: none;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.subskribe .subskribe__content .subskribe__form input:focus {
-  background: #fff;
-  -webkit-box-shadow: 0 0 20px #bfe0e0;
-  box-shadow: 0 0 20px #bfe0e0;
-  color: #7c7c7c;
-  font-size: 14px;
-  font-weight: 700;
-}
-
-.subskribe .subskribe__content .subskribe__form .subskribe__btn {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  text-align: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  text-decoration: none;
+.map #close {
+  display: none;
+  position: absolute;
+  right: 15px;
+  top: 20px;
+  font-size: 35px;
   color: #fff;
-  font-size: 15px;
-  margin: 0 auto;
-  max-width: 370px;
-  width: 100%;
-  height: 70px;
-  border: 2px solid #e88283;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(232, 129, 130, 0.9)), to(rgba(239, 217, 137, 0.9)));
-  background: linear-gradient(180deg, rgba(232, 129, 130, 0.9) 0%, rgba(239, 217, 137, 0.9) 100%);
-  text-transform: uppercase;
-  position: relative;
-  border-radius: 30px;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  cursor: pointer;
+  background: #777;
+  line-height: 0.8;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.subskribe .subskribe__content .subskribe__form .subskribe__btn:hover {
-  background: #fff;
-  color: #e88283;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.subskribe .subskribe__content .subskribe__form .subskribe__btn:focus {
-  outline: none;
+.map #close.vis {
+  display: block;
 }
 
 .footer {
@@ -2532,7 +2425,7 @@ undefined {
   margin-bottom: 0;
 }
 
-.footer .footer__content .footer__blogs .footer__blogs__item .footer__blogs__title {
+.footer .footer__content .footer__blogs .footer__blogs__item .footer__blogs__items .footer__blogs__title {
   color: #333333;
   font-size: 15px;
   text-transform: uppercase;
@@ -2541,7 +2434,7 @@ undefined {
   margin: 10px 0 10px 20px;
 }
 
-.footer .footer__content .footer__blogs .footer__blogs__item .footer__blogs__subtitle {
+.footer .footer__content .footer__blogs .footer__blogs__item .footer__blogs__items .footer__blogs__subtitle {
   color: #999999;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
@@ -2608,6 +2501,31 @@ undefined {
   margin: 0 5px;
 }
 
+.footer .footer__btn {
+  opacity: 0;
+}
+
+.footer .footer__btn.show {
+  opacity: 1;
+}
+
+.footer .footer__btn .btn__top {
+  position: fixed;
+  color: #fff;
+  bottom: 80px;
+  right: 40px;
+  z-index: 9999;
+  width: 30px;
+  height: 30px;
+  font-size: 15px;
+  text-align: center;
+  line-height: 30px;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(232, 129, 130, 0.9)), to(rgba(239, 217, 137, 0.9)));
+  background: linear-gradient(180deg, rgba(232, 129, 130, 0.9) 0%, rgba(239, 217, 137, 0.9) 100%);
+  cursor: pointer;
+  border-radius: 2px;
+}
+
 @media screen and (max-width: 1199px) {
   .footer .footer__content {
     grid-template-rows: 1fr 1fr;
@@ -2633,6 +2551,42 @@ undefined {
     padding-top: 50px;
   }
   .footer .footer__content {
+    grid-template-rows: 2fr;
+    grid-template-columns: 2fr;
+  }
+  .footer .footer__content .footer__items {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row: 2;
+    margin: 0 auto;
+  }
+  .footer .footer__content .footer__blogs {
+    max-width: 100%;
+    width: auto;
+    margin: 0 15px 30px;
+  }
+  .footer .footer__content .footer__blogs .footer__blogs__item {
+    display: block;
+  }
+  .footer .footer__content .footer__blogs .footer__blogs__item .footer__blogs__items .footer__blogs__logo {
+    margin: 0 auto;
+  }
+  .footer .footer__content .footer__blogs .footer__blogs__item .footer__blogs__items .footer__blogs__title {
+    margin-left: 0;
+  }
+  .footer .footer__content .footer__blogs .footer__blogs__item .footer__blogs__items .footer__blogs__subtitle {
+    margin-left: 0;
+  }
+  .footer .footer__content .footer__instagram {
+    margin: 0 15px 30px;
+  }
+  .footer .footer__date {
+    padding: 10px 0;
+  }
+}
+
+@media screen and (max-width: 474px) {
+  .footer .footer__content {
     grid-template-rows: 3fr;
     grid-template-columns: 1fr;
   }
@@ -2642,41 +2596,22 @@ undefined {
     grid-row: 3;
     margin: 30px auto 0;
   }
+  .footer .footer__content .footer__items .footer__input #input {
+    max-width: 100%;
+    margin-bottom: 5px;
+  }
+  .footer .footer__content .footer__items .footer__input .footer__btn {
+    max-width: 100%;
+  }
   .footer .footer__content .footer__blogs {
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row: 2;
+    max-width: 268px;
+    width: 100%;
     margin: 0 auto 30px;
   }
   .footer .footer__content .footer__instagram {
     margin: 0 auto 30px;
   }
-  .footer .footer__date {
-    padding: 10px 0;
-  }
-}
-
-.footer__btn {
-  opacity: 0;
-}
-
-.footer__btn.show {
-  opacity: 1;
-}
-
-.footer__btn .btn__top {
-  position: fixed;
-  color: #fff;
-  bottom: 80px;
-  right: 40px;
-  z-index: 9999;
-  width: 30px;
-  height: 30px;
-  font-size: 15px;
-  text-align: center;
-  line-height: 30px;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(232, 129, 130, 0.9)), to(rgba(239, 217, 137, 0.9)));
-  background: linear-gradient(180deg, rgba(232, 129, 130, 0.9) 0%, rgba(239, 217, 137, 0.9) 100%);
-  cursor: pointer;
-  border-radius: 2px;
 }
