--- a/scss/blocks/_general.scss
+++ b/scss/blocks/_general.scss
@@ -4,6 +4,10 @@
   padding: 0;
   margin: 0;
 }
+a:focus,
+:active {
+  outline: none;
+}
 body {
   font-family: "Montserrat", sans-serif;
   line-height: 1.3;
@@ -13,6 +17,19 @@ body {
 ul {
   list-style: none;
 }
-a {
+a,
+a:visited {
   text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+}
+button {
+  cursor: pointer;
+}
+ul li {
+  list-style: none;
+}
+img {
+  vertical-align: top;
 }
