--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@
   margin: 0;
 }
 
+a:focus,
+:active {
+  outline: none;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   line-height: 1.3;
@@ -21,8 +26,25 @@ ul {
   list-style: none;
 }
 
-a {
+a,
+a:visited {
   text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+ul li {
+  list-style: none;
+}
+
+img {
+  vertical-align: top;
 }
 
 .header {
@@ -216,38 +238,25 @@ a {
   margin-right: 10px;
 }
 
-.hamburger-menu {
+.header__burger {
   display: none;
 }
 
-.hamburger-menu #menu__toggle {
-  opacity: 0;
-}
-
-.hamburger-menu #menu__toggle:checked ~ .menu__btn > span {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.hamburger-menu #menu__toggle:checked ~ .menu__btn > span::before {
+.header__owerlay {
+  display: none;
+  position: fixed;
   top: 0;
-  -webkit-transform: rotate(0);
-  transform: rotate(0);
-}
-
-.hamburger-menu #menu__toggle:checked ~ .menu__btn > span::after {
-  top: 0;
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
-}
-
-.hamburger-menu #menu__toggle:checked ~ .menu__box {
-  visibility: visible;
   left: 0;
-  z-index: 100;
+  width: 100vh;
+  height: 100vh;
+  z-index: 10;
 }
 
-.hamburger-menu .menu__btn {
+.header__owerlay.active {
+  display: block;
+}
+
+.header__button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -263,29 +272,7 @@ a {
   z-index: 20;
 }
 
-.hamburger-menu .menu__btn > span,
-.hamburger-menu .menu__btn > span::before,
-.hamburger-menu .menu__btn > span::after {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background-color: #fff;
-  -webkit-transition-duration: 0.25s;
-  transition-duration: 0.25s;
-}
-
-.hamburger-menu .menu__btn > span::before {
-  content: "";
-  top: -8px;
-}
-
-.hamburger-menu .menu__btn > span::after {
-  content: "";
-  top: 8px;
-}
-
-.hamburger-menu .menu__box {
+.header__menu {
   display: block;
   position: fixed;
   visibility: hidden;
@@ -300,15 +287,23 @@ a {
   background: linear-gradient(180deg, rgba(232, 129, 130, 0.9) 0%, rgba(239, 217, 137, 0.9) 100%);
   -webkit-box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
   box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
-  -webkit-transition-duration: 0.25s;
-  transition-duration: 0.25s;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
 }
 
-.hamburger-menu .menu__box a {
+.header__menu.active {
+  visibility: visible;
+  left: 0;
+  z-index: 100;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+}
+
+.header__menu a {
   text-decoration: none;
 }
 
-.hamburger-menu .menu__box a.menu__item {
+.header__menu a.header__menu__item {
   text-transform: uppercase;
   display: block;
   margin: 20px auto;
@@ -320,8 +315,47 @@ a {
   transition-duration: 0.25s;
 }
 
-.hamburger-menu .menu__box a.menu__item:hover {
+.header__menu a.header__menu__item:hover {
   color: #fce38a;
+}
+
+.header__button.active > span {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.header__button.active > span::before {
+  top: 0;
+  -webkit-transform: rotate(0);
+  transform: rotate(0);
+}
+
+.header__button.active > span::after {
+  top: 0;
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+.header__button > span,
+.header__button > span::before,
+.header__button > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  -webkit-transition-duration: 0.25s;
+  transition-duration: 0.25s;
+}
+
+.header__button > span::before {
+  content: "";
+  top: -8px;
+}
+
+.header__button > span::after {
+  content: "";
+  top: 8px;
 }
 
 @media screen and (max-width: 1200px) {
@@ -349,7 +383,7 @@ a {
   .header .header__navigation .header__nav {
     display: none;
   }
-  .header .header__navigation .hamburger-menu {
+  .header .header__navigation .header__burger {
     display: block;
   }
   .header .header__title .header__content h2 {
@@ -367,7 +401,7 @@ a {
   .header .header__navigation {
     margin-bottom: 100px;
   }
-  .header .header__navigation .hamburger-menu .menu__box {
+  .header .header__navigation .header__burger .header__menu {
     width: 200px;
   }
   .header .header__title .header__content h2 {
